--- a/main2.html
+++ b/main2.html
@@ -1,30 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Planner</title>
+  <title>Google Calendar Knock Off</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div id="calendar">
     <div id="header">
-      <h1>Plan your week!</h1>
+      <h1>Google Calendar Knock Off</h1>
+      <button id="add-event-btn">Add Event</button>
     </div>
     <div id="nav">
       <ul>
-        <li><a href="#">Day</a></li>
+        <li><a href="#" class="active">Day</a></li>
         <li><a href="#">Week</a></li>
+        <li><a href="#">Month</a></li>
       </ul>
     </div>
     <div id="content">
       <div class="day-view">
         <h2>April 21, 2023</h2>
-        <ul>
-          <li>Meeting with John Doe at 10:00am</li>
-          <li>Lunch with Jane Smith at 12:30pm</li>
-          <li>Team Meeting at 3:00pm</li>
+        <ul id="event-list">
+          <li>
+            <span class="event-time">11:00</span>
+            <span class="event-name">Meeting with Alyssa Byrnes</span>
+          </li>
+          <li>
+            <span class="event-time">1:30pm</span>
+            <span class="event-name">Lunch with Joe Biden</span>
+          </li>
+          <li>
+            <span class="event-time">3:00pm</span>
+            <span class="event-name">Team Meeting</span>
+          </li>
         </ul>
       </div>
     </div>
   </div>
+
+  <div id="add-event-modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Add Event</h2>
+      <form>
+        <label for="event-name">Event Name:</label>
+        <input type="text" id="event-name" name="event-name" required>
+
+        <label for="event-date">Event Date:</label>
+        <input type="date" id="event-date" name="event-date" required>
+
+        <label for="event-time">Event Time:</label>
+        <input type="time" id="event-time" name="event-time" required>
+
+        <button type="submit" id="save-event-btn">Save</button>
+      </form>
+    </div>
+  </div>
+
+  <script src="app.js"></script>
 </body>
 </html>
