--- a/main2.html
+++ b/main2.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Google Calendar Knock Off</title>
+  <title>My planner</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div id="calendar">
     <div id="header">
-      <h1>Google Calendar Knock Off</h1>
+      <h1>Plan your day!</h1>
       <button id="add-event-btn">Add Event</button>
     </div>
     <div id="nav">
       <ul>
         <li><a href="#" class="active">Day</a></li>
         <li><a href="#">Week</a></li>
-        <li><a href="#">Month</a></li>
       </ul>
     </div>
     <div id="content">
@@ -31,7 +30,7 @@
           </li>
           <li>
             <span class="event-time">3:00pm</span>
-            <span class="event-name">Team Meeting</span>
+            <span class="event-name">Billionares' Meeting</span>
           </li>
         </ul>
       </div>
