--- a/index.html
+++ b/index.html
@@ -2,8 +2,42 @@
 <html>
   <head>
     <title>My Calendar</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="main_style.css">
   </head>
   <body>
-    
+    <div class="wrapper">
+        <h1>Weekly Planner</h1>
+        <div class="container">
+          <div class="column">
+            <h2>Sunday</h2>
+            <div class="box"></div>
+          </div>
+          <div class="column">
+            <h2>Monday</h2>
+            <div class="box"></div>
+          </div>
+          <div class="column">
+            <h2>Tuesday</h2>
+            <div class="box"></div>
+          </div>
+          <div class="column">
+            <h2>Wednesday</h2>
+            <div class="box"></div>
+          </div>
+          <div class="column">
+            <h2>Thursday</h2>
+            <div class="box"></div>
+          </div>
+          <div class="column">
+            <h2>Friday</h2>
+            <div class="box"></div>
+          </div>
+          <div class="column">
+            <h2>Saturday</h2>
+            <div class="box"></div>
+          </div>
+        </div>
+      </div>
+      
   </body>
+</html>
