--- a/index1.html
+++ b/index1.html
@@ -16,4 +16,29 @@
       
       <button type="submit">Add Event</button>
     </form>
+    <table>
+        <tbody>
+          <tr>
+            <td>9:00 AM</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>10:00 AM</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <!-- Add more rows as needed -->
+        </tbody>
+      </table>
   </body>
